Issue #111: added Endpoint for retrieving participants with API Key
