# src/main/java/io/redlink/more/data/model/Participant.java
@@ -1,0 +1,7 @@
+package io.redlink.more.data.model;
+
+public record Participant(
+        int id,
+        String alias,
+        String status
+) {}
